# quarry

./: .gitignore  .napkin.md  AGENTS.md  CLAUDE.md  CONTRACTS.md  GEMINI.md  HYDROLOGY_PACK.md  LICENSE  PRESSURE_TESTS.md  PROJECT.md  README.md  REPO_MAP.md  justfile  pyproject.toml  pytest.ini
.dgov/: .gitignore  governor.md  project.toml  state.db
.dgov/sops/: architecture.md  code-review.md  error-handling.md  git-commits.md  large-file-handling.md  python-style.md  refactoring-discipline.md  return-values.md  state-modeling-review.md  testing.md
.sentrux/: .gitignore  baseline.json  rules.toml
examples/: watershed_analysis.py
src/georuntime/: __init__.py  registry.py
tests/: test_inspect.py  test_preview.py  test_registry.py
tests/fixtures/: test.geojson
tests/pressure_test/: adapter_helpers.py  conftest.py  test_aspect.py  test_buffer.py  test_build_cog.py  test_cli.py  test_cli_inspection.py  test_cli_json.py  test_cli_rasterize.py  test_cli_route.py  test_cli_sample.py  test_cli_zonal.py  test_clip_vector.py  test_cog_connector.py  test_connector_router.py  test_csv_xy_connector.py  test_d8_flow_direction.py  test_dissolve.py  test_duckdb_connector.py  test_end_to_end.py  test_excel_xy_connector.py  test_fill_depressions.py  test_flatgeobuf_connector.py  test_flow_accumulation.py  test_fof_stack_connector.py  test_generic_dispatch.py  test_geocode_slc.py  test_geojsonseq_connector.py  test_geopackage_connector.py  test_geoparquet_connector.py  test_gpx_connector.py  test_hillshade.py  test_hydrology_adversarial.py  test_hydrology_flow.py  (+30 more)
(+46 files in other folders)
