[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georuntime"
version = "0.1.0"
description = "Personal geospatial runtime"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "click>=8.0.0",
    "rasterio>=1.3.0",
    "fiona>=1.9.0",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
georuntime = "georuntime.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/georuntime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
quarry-core = { workspace = true }
quarry-connectors = { workspace = true }
quarry-operators = { workspace = true }
quarry-registry = { workspace = true }

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
]
